ajustes nas views e paginação kaminari

--- a/app/assets/stylesheets/semantic.css
+++ b/app/assets/stylesheets/semantic.css
@@ -869,44 +869,63 @@ input::selection {
   box-shadow: 0px 1px 1px black;
 }
 
-/*******************************
-            message
-*******************************/
-.alert_notice_error {
-  padding: 2px;
-  background-color: #f44336;
-  color: white;
-}
-/*--------------
-      Hover
----------------*/
+/*****************************
+  Kaminari Pagination
+  
+*****************************/
 
-.ui.button:hover {
-  background-color: #CACBCD;
-  background-image: none;
-  box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-  color: rgba(0, 0, 0, 0.8);
+.pagination a, .pagination span.gap {
+  float: left;
+  padding: 0 20px;
+  margin: 2px;
+  line-height: 38px;
+  text-decoration: none;
+  background-color: #d3d3d3;
+  border: 1px solid #DDD;
+  border-left-width: 0;
+  color: #4F4F4F;
 }
 
-.ui.button:hover .icon {
-  opacity: 0.85;
+.pagination span.current{
+  float: left;
+  padding: 0 20px;
+  margin: 2px;
+  line-height: 38px;
+  text-decoration: none;
+  background-color: #545454;
+  border: 1px solid #DDD;
+  border-left-width: 0;
+  color: #fff;
 }
 
-/*--------------
-      Focus
----------------*/
-
-.ui.button:focus {
-  background-color: #CACBCD;
-  color: rgba(0, 0, 0, 0.8);
-  background-image: '' !important;
-  box-shadow: '' !important;
+.pagination {
+  border-left: 1px solid #ddd;
+  .first{
+      padding : 0;
+      float: none;
+      border: none;
+  }
+  .prev {
+      padding : 0;
+      float: none;
+      border: none;
+  }
+  .page{
+      padding : 0;
+      float: none;
+      border: none;
+  }
+  .next{
+      padding : 0;
+      float: none;
+      border: none;
+  }
+  .last{
+      padding : 0;
+      float: none;
+      border: none;
+  }
 }
-
-.ui.button:focus .icon {
-  opacity: 0.85;
-}
-
 
 /*-------------------------
     Access Deny project
@@ -920,10 +939,6 @@ input::selection {
   color: #948F8F;
   font-size: 18px;
 }
-
-
-
-
 
 /*--------------
       Down
