--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,8 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
-    <a href="#" class="item active"><strong>Users</strong></a>
-    <%= link_to "Novo", new_user_path, class: 'item' %>
+  <div class="ui menu">
+    <a href="#" class="item active"><strong>Usuário</strong></a>
   </div>
 
   <table class="ui celled table">
@@ -37,5 +36,5 @@
       <% end %>
     </tbody>
   </table>
-
+<%= link_to "Novo", new_user_path, class: 'item ui blue button' %>
 </div>
