--- a/app/views/function_user_projects/edit.html.erb
+++ b/app/views/function_user_projects/edit.html.erb
@@ -1,11 +1,12 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Editando membro</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', function_user_projects_path, class: 'item' %>
   </div>
 
   <%= render 'form' %>
+     <br />
+    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
+    <%= link_to 'Cancelar', function_user_projects_path, class: 'item ui red button' %>
 </div>
