--- a/app/views/function_user_projects/new.html.erb
+++ b/app/views/function_user_projects/new.html.erb
@@ -1,11 +1,12 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
-    <a href="#" class="item active"><strong>Novo membro</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', function_user_projects_path, class: 'item' %>
+  <div class="ui menu">
+    <a class="item active"><strong>Novo membro</strong></a>
   </div>
 
   <%= render 'form' %>
+    <br />
+    <%= link_to 'Salvar', new_function_user_project_path({ controller: 'function_user_projects', action: 'create' }), class: 'item save ui blue button' %>
+    <%= link_to 'Cancelar', function_user_projects_path, class: 'item ui red button' %>
 </div>
