--- a/app/views/functions/index.html.erb
+++ b/app/views/functions/index.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Função</strong></a>
     <%= link_to "Nova", new_function_path, class: 'item' %>
   </div>
