--- a/app/views/functions/show.html.erb
+++ b/app/views/functions/show.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Function</strong></a>
     <%= link_to 'Novo', new_function_path, class: 'item' %>
     <%= link_to 'Editar', edit_function_path(@function), class: 'item' %>
