--- a/app/views/layouts/_user_top_menu_bar.html.erb
+++ b/app/views/layouts/_user_top_menu_bar.html.erb
@@ -3,7 +3,7 @@
 <%= image_tag('logo.png', :class=>"logo menu")%>
   <div class="right menu">
     <%= link_to notifications_path, class: "#{is_current_page?(notifications_path)} item", title: 'Notificações' do %>
-      <i class="alarm icon"></i>
+      <%= image_tag("bell_notification.png") %>
       Notificações
       <% if Notification.unread_count(current_user) > 0 %>
         <div class="ui red label"><%= Notification.unread_count(current_user) %></div>
@@ -12,7 +12,6 @@
       <% end %>
     <% end %>
     <div class="ui dropdown item">
-      <i class="user icon"></i> 
            <% if current_user %>
              <% if current_user.avatar.attached? %>
              <%= image_tag(current_user.avatar_thumbnail, :title=> current_user.name, :class=> "image_thumbnail") %>
@@ -30,8 +29,6 @@
         <%= link_to destroy_user_session_path, method: :delete, class: 'item' do %>
           Sair
         <% end %>
-
-
 
         
       </div>
