--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,9 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <strong class="item active">Novo projeto</strong>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
+    <%= link_to 'Salvar', new_project_path({ controller: 'projects', action: 'create' }), class: 'item save' %>
     <%= link_to 'Cancelar', projects_path, class: 'item' %>
   </div>
 
