--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -1,11 +1,13 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Editando release</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', releases_path, class: 'item' %>
+
   </div>
 
   <%= render 'form' %>
+     <br />
+    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
+    <%= link_to 'Cancelar', releases_path, class: 'item ui red button' %>
 </div>
