--- a/app/views/releases/new.html.erb
+++ b/app/views/releases/new.html.erb
@@ -1,11 +1,12 @@
 <p></p>
+ <%= render 'releases/breadcrumb' %>
+ <br />
+ <br />
 
 <div class="ui container">
-  <div class="ui menu"">
-    <a href="#" class="item active"><strong>Novo release</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', releases_path, class: 'item' %>
-  </div>
 
   <%= render 'form' %>
+  <br />
+    <%= link_to 'Salvar', new_release_path({ controller: 'releases', action: 'create' }), class: 'ui blue button item save' %>
+    <%= link_to 'Cancelar', releases_path, class: 'item ui red button' %>
 </div>
