--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Release</strong></a>
     <%= link_to 'Novo', new_release_path, class: 'item' %>
     <%= link_to 'Editar', edit_release_path(@release), class: 'item' %>
