--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -1,11 +1,14 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Nova sprint</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', sprints_path, class: 'item' %>
   </div>
 
   <%= render 'form' %>
+  <br />
+    <%= link_to 'Salvar', new_sprint_path({ controller: 'sprint', action: 'create' }), class: 'item save ui blue button' %>
+    <%= link_to 'Cancelar', sprints_path, class: 'item ui red button' %>
+  <br />
+  <br />
 </div>
