--- a/app/views/sprints/show.html.erb
+++ b/app/views/sprints/show.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Sprint</strong></a>
     <%= link_to 'Novo', new_sprint_path, class: 'item' %>
     <%= link_to 'Editar', edit_sprint_path(@sprint), class: 'item' %>
