--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -1,11 +1,12 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
-    <a href="#" class="item active"><strong>Editando theme</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', themes_path, class: 'item' %>
+  <div class="ui menu">
+    <a href="#" class="item active"><strong>Editando tema</strong></a>
   </div>
 
   <%= render 'form' %>
+  <br />
+     <%= link_to 'Salvar', class: 'item save ui blue button' %>
+    <%= link_to 'Cancelar', themes_path, class: 'item ui red button' %>
 </div>
