--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>Theme</strong></a>
     <%= link_to 'Novo', new_theme_path, class: 'item' %>
     <%= link_to 'Editar', edit_theme_path(@theme), class: 'item' %>
