--- a/app/views/user_stories/_form.html.erb
+++ b/app/views/user_stories/_form.html.erb
@@ -1,14 +1,15 @@
 
 <%= form_for(@user_story, html: {class: 'ui form'}) do |f| %>
 
-  <% if @user_story.errors.any? %>
-    <div id="error_explanation">
+   <% if @user_story.errors.any? %>
+    <div class="alert_notice_error">
       <ul>
       <% @user_story.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
+    <br />
   <% end %>
 
     <div class="inline field">
