--- a/app/views/user_stories/edit.html.erb
+++ b/app/views/user_stories/edit.html.erb
@@ -3,9 +3,10 @@
 <div class="ui container">
   <div class="ui menu">
     <strong class="item active">Editando User Story</strong>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', user_stories_path, class: 'item' %>
   </div>
 
   <%= render 'form' %>
+  <br />
+   <%= link_to 'Salvar', new_user_story_path({ controller: 'user_stories', action: 'create' }), class: 'item save ui blue button' %>
+   <%= link_to 'Cancelar', user_stories_path, class: 'item ui red button' %>
 </div>
