--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -3,7 +3,7 @@
 <div class="ui container">
   <div class="ui menu">
     <a href="#" class="item active"><strong>User Stories</strong></a>
-    <%= link_to "Novo", new_user_story_path, class: 'item' %>
+    
   </div>
 
   <%= render 'user_stories/breadcrumb' %>
@@ -16,6 +16,7 @@
       <br />
       <br />
       <p class="access_deny">Nenhuma user story criada. Clique em "Novo" para iniciar o backlog.</p>
+      <%= link_to "Novo", new_user_story_path, class: 'item ui blue button' %>
     </div>
   </div>
 <% end %>
