--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,12 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
-    <a href="#" class="item active"><strong>Novo user</strong></a>
-    <%= link_to 'Salvar', '#', class: 'item save' %>
-    <%= link_to 'Cancelar', users_path, class: 'item' %>
+  <div class="ui menu">
+    <a href="#" class="item active"><strong>Novo usuário</strong></a>
   </div>
 
   <%= render 'form' %>
+    <br />
+    <%= link_to 'Salvar', new_user_path({ controller: 'users', action: 'create' }), class: 'item save ui blue button' %>
+    <%= link_to 'Cancelar', users_path, class: 'item ui red button' %>
 </div>
