--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,8 +4,13 @@
           <br />
     
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-         <%= devise_error_messages! %>
-        
+         
+         <% if resource.errors.any? %>
+            <div class="alert_notice_error">
+              <%= devise_error_messages! %>
+            </div>
+         <% end %>
+
            <% if current_user %>
             <% if current_user.avatar.attached? %>
             <%= image_tag(current_user.avatar_thumbnail, :class=> "image_profile") %>
@@ -14,7 +19,6 @@
            <% end %>
            <% end %>
          
-    
           <div>
             <%= f.file_field :avatar %>
           </div>
@@ -43,9 +47,9 @@
             <%= f.label "Confirmação de senha", class: "p" %>
            <br />
            <%= f.password_field :password_confirmation, placeholder: "Digite a nova senha", autocomplete: "off", class: "field_input" %>
-         </div>
+          </div>
     
-         <div>
+          <div>
             <%= f.label "Senha atual", class: "p" %> <b class="sub_text">(Digite sua senha atual para confirmar as mudanças)</b>
             <br />
             <%= f.password_field :current_password, autocomplete: "off", class: "field_input"  %>
