--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu"">
+  <div class="ui menu">
     <a href="#" class="item active"><strong>User</strong></a>
     <%= link_to 'Novo', new_user_path, class: 'item' %>
     <%= link_to 'Editar', edit_user_path(@user), class: 'item' %>
