--- a/app/views/function_user_projects/_form.html.erb
+++ b/app/views/function_user_projects/_form.html.erb
@@ -25,8 +25,7 @@
 
 <script type="text/javascript">
   $('.save').click(function(){
-    $('form').submit();    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', sprints_path, class: 'item ui red button' %>
+    $('form').submit();    
   });
 
   $('.ui.search.dropdown').dropdown({ allowLabels:true});
