--- a/app/views/functions/new.html.erb
+++ b/app/views/functions/new.html.erb
@@ -7,6 +7,6 @@
 
   <%= render 'form' %>
     <br />
-    <%= link_to 'Salvar', new_function_path({ controller: 'functiosns', action: 'create' }), class: 'item save ui blue button' %>
+    <%= link_to 'Salvar', new_function_path({ controller: 'functions', action: 'create' }), class: 'item save ui blue button' %>
     <%= link_to 'Cancelar', functions_path, class: 'ui red button' %>
 </div>
