--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -1,10 +1,21 @@
 
 
 <div class="ui container">
-  <div class="ui menu">
-    <a href="#" class="item active"><strong>User Stories</strong></a>
-    
-  </div>
+
+ <div class="info_accordion">
+        <!--
+        <%#= form_tag(user_stories_path, method: :get, class: "ui form") do %>
+           <div class="inline field">
+              <%#= text_field_tag :search, params[:search], placeholder: "Buscar User stories" %>
+              <%#= image_submit_tag("search.png") %>
+           </div>    
+        <%# end %>
+        -->
+      </div>
+      <h1>User Stories</h1>
+      <div class="sub_title">Aqui você cria e gerencia suas histórias e backlog.</div>
+      <hr>
+
 
   <%= render 'user_stories/breadcrumb' %>
   <br />
@@ -19,7 +30,11 @@
       <%= link_to "Novo", new_user_story_path, class: 'item ui blue button' %>
     </div>
   </div>
-<% end %>
+<% else %>
+
+<%= link_to "Novo", new_user_story_path, class: 'item ui blue button' %>
+<br />
+<br />
 
 <% @user_stories.each do |user_story| %>
 <button class="us-accordion">
@@ -40,6 +55,27 @@
      <% end %>
 
       <div class="info_accordion">
+      <% if user_story.priority_id == 1 %>
+          <div class="ui compact mini icon red basic button">
+               <b>Prioridade: </b>
+                Alta
+          </div>
+       <% end %>
+
+      <% if user_story.priority_id == 2 %>
+         <div class="ui compact mini silver icon orange basic button ">
+             <b>Prioridade: </b>
+               Média
+         </div>
+      <% end %>
+
+      <% if user_story.priority_id == 3 %>
+        <div class="ui compact mini icon green basic button ">
+            <b>Prioridade: </b>
+            Baixa
+        </div>
+      <% end %>
+
        <div class="ui compact mini icon silver basic button"><b>Status: </b>
          <% if user_story.status == 1 %>
           Pendente
@@ -200,7 +236,15 @@
         </div>
       </div> 
     </div>
-  </div> 
+  </div>
+  <% end %> 
+
+  <br />
+  <%= paginate @user_stories %>
+  <br />
+  <br />
+  <br />
+
 </div>
 <!-- /MODAL TAREFA -->
 <script type="text/javascript">
