Adicionado alert para mensagens do devise

--- a/app/views/function_user_projects/_form.html.erb
+++ b/app/views/function_user_projects/_form.html.erb
@@ -1,15 +1,20 @@
 <%= form_for(@function_user_project, html: {class: 'ui form'}) do |f| %>
 
-  <% if @function_user_project.errors.any? %>
-    <div class="alert_notice_error">
-      <ul>
-      <% @function_user_project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-    <br />
-  <% end %>
+
+     <% if @function_user_project.errors.any? %>
+      <div class="ui container">
+        <div class="ui negative message">
+           <div class="close icon">x</div>
+              <div class="header">
+            <% @function_user_project.errors.full_messages.each do |message| %>
+                <p> - <%= message %> </p>
+            <% end %>
+          </div>
+         </div>
+       <p></p>
+    <% end%>
+
+
 
     <div class="field">
       <%= f.label :user_id %>
