--- a/app/assets/stylesheets/semantic.css
+++ b/app/assets/stylesheets/semantic.css
@@ -23663,8 +23663,9 @@ Floated Menu / Item
 /* Positive */
 
 .ui.positive.message {
-  background-color: #FCFFF5;
-  color: #2C662D;
+  background-color: #1a800c;
+  color: #F3F4F5;
+  font-weight: bold;
 }
 
 .ui.positive.message,
@@ -23679,8 +23680,8 @@ Floated Menu / Item
 /* Negative */
 
 .ui.negative.message {
-  background-color: #FFF6F6;
-  color: #9F3A38;
+  background-color: #df0b0b;
+  color: #fffefe;
 }
 
 .ui.negative.message,
