--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -1,15 +1,17 @@
 <%= form_for(@release, html: {class: 'ui form'}) do |f| %>
 
-  <% if @release.errors.any? %>
-    <div class="alert_notice_error">
-      <ul>
-      <% @release.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-    <br />
-  <% end %>
+ <% if @release.errors.any? %>
+      <div class="ui container">
+        <div class="ui negative message">
+           <div class="close icon">x</div>
+              <div class="header">
+            <% @release.errors.full_messages.each do |message| %>
+                <p> - <%= message %> </p>
+            <% end %>
+          </div>
+         </div>
+       <p></p>
+  <% end%>
 
     <div class="field">
       <%= f.label :version %>
