--- a/app/views/user_stories/_form.html.erb
+++ b/app/views/user_stories/_form.html.erb
@@ -1,16 +1,18 @@
 
 <%= form_for(@user_story, html: {class: 'ui form'}) do |f| %>
 
-   <% if @user_story.errors.any? %>
-    <div class="alert_notice_error">
-      <ul>
-      <% @user_story.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-    <br />
-  <% end %>
+  <% if @user_story.errors.any? %>
+      <div class="ui container">
+        <div class="ui negative message">
+           <div class="close icon">x</div>
+              <div class="header">
+            <% @user_story.errors.full_messages.each do |message| %>
+                <p> - <%= message %> </p>
+            <% end %>
+          </div>
+         </div>
+       <p></p>
+  <% end%>
 
     <div class="inline field">
       <div class="ui search icon input">
