--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,12 +4,18 @@
           <br />
     
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-         
-         <% if resource.errors.any? %>
-            <div class="alert_notice_error">
-              <%= devise_error_messages! %>
-            </div>
-         <% end %>
+  
+
+     <% if resource.errors.any? %>
+      <div class="ui container">
+        <div class="ui negative message">
+           <div class="close icon">x</div>
+              <div class="header">
+                <p> - <%= devise_error_messages! %></p>
+              </div>
+         </div>
+       <p></p>
+     <% end%>
 
            <% if current_user %>
             <% if current_user.avatar.attached? %>
