Fix do bug de upload de imagem de perfil usuário

--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="field">
-          <%= f.submit " Clique aqui para envio de email de recuperação de senha  ", class: 'ui teal button' %>
+          <%= f.submit "   Clique aqui para enviar o email de recuperação de senha  ", class: 'ui teal button' %>
         </div>
       <% end %>
    <br />
