validação de número máximo de caracteres no campo initial

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,7 +19,7 @@
 
   <div class="inline field">
     <%= f.label :initial %>
-    <%= f.text_field :initial %>
+    <%= f.text_field :initial, maxlength: 6 %>
   </div>
 
   <div class="inline field">
