--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -88,14 +88,20 @@
         </button>
     </div>
 
-
-
-
     <div class="card">   
       <button class="ui bottom attached button" onclick="window.location.href='<%= themes_path %>'"> 
          <%= image_tag("tema.png") %>
          <div class="description">
             Configure aqui os temas das user stories dos projetos
+         </div>
+    </button>
+  </div>
+
+  <div class="card">   
+      <button class="ui bottom attached button" onclick="window.location.href='<%= sprint_graph_path %>'"> 
+         <%= image_tag("barra-do-grafico.png") %>
+         <div class="description">
+            Acompanhe os relatórios e gráficos do andamento do projeto.
          </div>
     </button>
   </div>
