--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,61 @@
-<h2>Change your password</h2>
+<div class="img_background">
+<div class="logo form">
+      <%= image_tag("logo.png") %>
+  </div>
+<div class="ui centered grid container">
+  <div class="six wide column form_box">
+  <h4 class="box_center">Alterar Senha</h4>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'ui form' }) do |f| %>
+      <% if resource.errors.any? %>
+          <div class="ui container">
+            <div class="ui negative message">
+               <div class="close icon">x</div>
+                  <div class="header">
+                   <p> <% resource.errors.full_messages.each do |message| %>
+                    <%= message %>
+                    <% end %></p>
+              </div>
+             </div>
+           <p></p>
+      <% end%>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <div class="field">
+        <b> Nova senha </b>- 
+        <% if @minimum_password_length %>
+          <em>(Mínimo <%= @minimum_password_length %> caracteres)</em><br />
+        <% end %>
+         <br />
+        <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+     </div>
+    
+      <div class="field">
+         <%= f.label :password_confirmation, "Confirmar senha" %><br />
+         <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+
+       <div class="field">
+          <%= f.submit "Alterar senha", class: "ui teal button" %>
+         </div>
+
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <p></p>
+    <p></p>
+    <p></p>
+         <%= render "users/shared/links" %>
+ 
   </div>
+ 
+ </div>
+    <br />
+     <br />
+       <br />
+         <br />
+           <br />
+</div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
 
-<%= render "users/shared/links" %>
+
+
