--- a/app/views/layouts/_alert_messages.html.erb
+++ b/app/views/layouts/_alert_messages.html.erb
@@ -1,30 +1,16 @@
 <!-- alert notification -->
-<% if notice %>
+<% if flash[:notice] %>
 <p></p>
 <div class="ui container">
   <div class="ui positive message">
   <div class="close icon">x</div>
-    <p><%= notice %></p>
+    <p><%= flash[:notice] %></p>
     <p></p>
   </div>
 </div>
 <p></p>
 <% end %>
 
-<!-- alert warning -->
-<% if alert %>
-<p></p>
-<div class="ui warning container">
-  <div class="ui message">
-    <div class="close icon">X</div>
-    <div class="header">
-      Alerta!
-    </div>
-    <p><%= alert %></p>
-  </div>
-</div>
-<p></p>
-<% end %>
 
 <!-- alert success -->
 <% if flash[:success] %>
