--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -98,7 +98,7 @@
   </div>
 
   <div class="card">   
-      <button class="ui bottom attached button" onclick="window.location.href='<%= sprint_graph_path %>'"> 
+      <button class="ui bottom attached button" onclick="window.location.href='<%= chart_url %>'"> 
          <%= image_tag("barra-do-grafico.png") %>
          <div class="description">
             Acompanhe os relatórios e gráficos do andamento do projeto.
