--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -36,7 +36,7 @@
       </div>
 
        <div class="field">
-          <%= f.submit "Alterar senha", class: "ui teal button" %>
+          <%= f.submit "Alterar senha", class: "ui teal button", id: "change_pass"%>
          </div>
 
     <% end %>
