--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -5,9 +5,7 @@
   </div>
 <br />
 
-
 <div class="ui centered grid container ">
-
 
   <div class="six wide column form_box">
     <h4 class="box_center">Digite seu email para recuperação da senha</h4>
@@ -31,7 +29,7 @@
         </div>
 
         <div class="field">
-          <%= f.submit "   Clique aqui para enviar o email de recuperação de senha  ", class: 'ui teal button' %>
+          <%= f.submit "  Clique aqui para enviar o email de recuperação de senha ", class: "ui teal button", id: "btn_reset_pass" %>
         </div>
       <% end %>
    <br />
