--- a/app/views/functions/index.html.erb
+++ b/app/views/functions/index.html.erb
@@ -1,16 +1,15 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu">
-    <a href="#" class="item active"><strong>Função</strong></a>
-    <%= link_to "Nova", new_function_path, class: 'item' %>
-  </div>
-
+ 
+ <h1>Funções</h1>
+      <div class="sub_title">Aqui você cria e gerencia as funções dos participantes dos projetos.</div>
+      <hr>
   <table class="ui celled table">
     <thead>
       <tr>
-                <th>Name</th>
-                <th>Description</th>
+                <th>Função</th>
+                <th>Descrição</th>
                 <th width="290">Ações</th>
       </tr>
     </thead>
@@ -21,11 +20,9 @@
             <td><%= function.name %></td>
             <td><%= function.description %></td>
             <td>
+           
               <div class="ui buttons">
-                  <%= link_to 'Exibir', function, class: 'ui blue button' %>
-              </div>
-              <div class="ui buttons">
-                  <%= link_to 'Editar', edit_function_path(function), class: 'ui yellow button' %>
+                  <%= link_to 'Editar', edit_function_path(function), class: 'ui blue button' %>
               </div>
               <div class="ui buttons">
                   <%= link_to 'Remover', function, method: :delete, data: { confirm: 'Você tem certeza?' }, class: 'ui red button' %>
@@ -35,5 +32,5 @@
       <% end %>
     </tbody>
   </table>
-
+<%= link_to "Nova", new_function_path, class: 'item ui blue button' %>
 </div>
