--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,11 +1,10 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu">
-    <strong class="item active">Novo projeto</strong>
-    
-  </div>
-
+  <h1>Novo projeto</h1>
+  <hr>
+  <br />
+  
   <%= render 'form' %>
   
     <%= link_to 'Salvar', new_project_path({controller: 'projects', action: 'create' }), class: 'item save ui blue button' %>
