--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,9 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu">
-    <a href="#" class="item active"><strong>Editando usuário</strong></a>
-  </div>
-
+     <h1>Editar usuário</h1>
+    <hr>
+    <br />
   <%= render 'form' %>
     <br />
    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
