--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,11 @@
 <p></p>
 
 <div class="ui container">
-  <div class="ui menu">
-    <a href="#" class="item active"><strong>Novo usuário</strong></a>
-  </div>
-
+    <h1>Novo usuário</h1>
+    <hr>
+    <br />
   <%= render 'form' %>
     <br />
-    <%= link_to 'Salvar', new_user_path({ controller: 'users', action: 'create' }), class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', users_path, class: 'item ui red button' %>
+    <%= link_to 'Salvar', new_user_path({ controller: 'users', action: 'create' }), class: 'item save ui blue button', id: "btn_save_user" %>
+    <%= link_to 'Cancelar', users_path, class: 'item ui red button', id: "btn_cancel_user" %>
 </div>
