--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,23 +1,27 @@
-   <div class="form_devise">
+   
+   
           
-    
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  
-             <% if resource.errors.any? %>
-             <% flash.each do |message_type, message|%>
-                       <div class="ui container">
-                         <%= content_tag :div, message, class: [:alert, alert_for(message_type)], role: 'alert' do %>
-                            <div class="close icon">x</div>
-                                <div class="header">
-                                <p><%= message %></p>
-                                </div>
-                            </div>
-                         <%end%>
-               <%end%>
-             <% end%>
+<div class="ui container">    
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'ui form', method: :put }) do |f| %>
+
+
+        <% if resource.errors.any? %>
+      <div class="ui container">
+        <div class="ui negative message">
+           <div class="close icon">x</div>
+              <div class="header">
+            <% resource.errors.full_messages.each do |message| %>
+                <p> - <%= message %> </p>
+            <% end %>
+          </div>
+         </div>
+       <p></p>
+    <% end%>
+
+
 
          <br />
-          <div class="header_text">Editar perfil</div>
+          <h1>Editar perfil</h1>
           <br />
            <% if current_user %>
             <% if current_user.avatar.attached? %>
@@ -27,47 +31,46 @@
            <% end %>
            <% end %>
 
-             
-          <div>
+      
             <%= f.file_field :avatar %>
-          </div>
+
     
-          <div>
+          <div class="field">
               <%= f.label "Nome", class: "p" %><br />
-              <%= f.text_field :name, autofocus: true, class: "field_input" %>
+              <%= f.text_field :name, autofocus: true %>
           </div>
     
-          <div>
+          <div class="field">
             <%= f.label "Email", class: "p" %><br />
-           <%= f.email_field :email, autofocus: true, class: "field_input" %>
+           <%= f.email_field :email, autofocus: true %>
           </div>
     
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <>Aguardando a confirmação de: <%= resource.unconfirmed_email %></div>
           <% end %>
     
-          <div>
+          <div class="field">
             <%= f.label "Senha", class: "p" %> <b class="sub_text">(Deixe a senha em branco caso não queira alterá-la)</b>
             <br />
-            <%= f.password_field :password, placeholder: "Digite sua senha", autocomplete: "off", class: "field_input" %>
+            <%= f.password_field :password, placeholder: "Digite sua senha", autocomplete: "off" %>
           </div>
     
-          <div>
+          <div class="field">
             <%= f.label "Confirmação de senha", class: "p" %>
            <br />
-           <%= f.password_field :password_confirmation, placeholder: "Digite a nova senha", autocomplete: "off", class: "field_input" %>
+           <%= f.password_field :password_confirmation, placeholder: "Digite a nova senha", autocomplete: "off" %>
           </div>
     
-          <div>
+          <div class="field">
             <%= f.label "Senha atual", class: "p" %> <b class="sub_text">(Digite sua senha atual para confirmar as mudanças)</b>
             <br />
-            <%= f.password_field :current_password, autocomplete: "off", class: "field_input"  %>
+            <%= f.password_field :current_password, autocomplete: "off"%>
           </div>
     
           <div>
-            <%= f.submit "Alterar", class: "button_change_devise" %>
+            <%= f.submit "Alterar", class: "ui blue button" %>
           </div>
-         
+         <br />
           <% end %>
     
     </div>
